minor font fixes

--- a/#source/footer.html
+++ b/#source/footer.html
@@ -36,7 +36,7 @@
                 <div class="subscription__box">
                     <h5 class="subscription__title">Let's stay in touch</h5>
                     <div class="email__field">
-                        <input type="email" value="Your email address">
+                        <input type="email" placeholder="Your email address">
                         <input type="button" value="SUBSCRIBE">
                     </div>
                     <p class="opacity__text">
