--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@
                     </div>
                     <div class="form__item">
                         <label for="communication__message">Message*</label>
-                        <input type="text" id="communication__message" placeholder="Your message" required>
+                        <textarea rows="2" cols="15" placeholder="Your message" id="letter" name="message" required></textarea>
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
@@ -389,7 +389,7 @@
                 <div class="subscription__box">
                     <h5 class="subscription__title">Let's stay in touch</h5>
                     <div class="email__field">
-                        <input type="email" value="Your email address">
+                        <input type="email" placeholder="Your email address">
                         <input type="button" value="SUBSCRIBE">
                     </div>
                     <p class="opacity__text">
