--- a/cottage.html
+++ b/cottage.html
@@ -161,103 +161,104 @@
                         </div>
                     </div>
 
-<div class="projects__slider">
-    <div class="projects__slides">
-        <input type="radio" name="projects_r" id="projects_r1" checked>
-        <input type="radio" name="projects_r" id="projects_r2" >
-        <input type="radio" name="projects_r" id="projects_r3" >
-
-        <div class="projects__slide projects__s1">
-            <div class="projects__cards">
-                <div class="projects__item-1">
-                    <div class="item__box">
-                        <h4 class="item__title">Red Finger Building</h4>
-                        <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                    <div class="projects__slider">
+                        <div class="projects__slides">
+                            <input type="radio" name="projects_r" id="projects_r1" checked>
+                            <input type="radio" name="projects_r" id="projects_r2" >
+                            <input type="radio" name="projects_r" id="projects_r3" >
+                    
+                            <div class="projects__slide projects__s1">
+                                <div class="projects__cards">
+                                    <div class="projects__item-1">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Luxury Beach House</h4>
+                                            <p class="item__text">Private Houses</p>
+                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-2">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Brown and Gray Painted House</h4>
+                                            <p class="item__text">Private Houses</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-3">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Scandinavian Style Interior</h4>
+                                            <p class="item__text">Private Houses</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="projects__slide">
+                                <div class="projects__cards">
+                                    <div class="projects__item-4">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Modern Cottage</h4>
+                                            <p class="item__text">Private houses</p>
+                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-5">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Kids Bedroom With Decorations</h4>
+                                            <p class="item__text">Apartments & flats</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-6">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Modern Double Bedroom</h4>
+                                            <p class="item__text">Apartments & flats</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="projects__slide">
+                                <div class="projects__cards">
+                                    <div class="projects__item-7">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Red Finger Building</h4>
+                                            <p class="item__text">Business Centers</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-8">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Cubes Building</h4>
+                                            <p class="item__text">Business Centers</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-9">
+                                        <div class="item__box">
+                                            <h4 class="item__title">The Pencil Building</h4>
+                                            <p class="item__text">Stores & Malls</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="projects__item-2">
-                    <div class="item__box">
-                        <h4 class="item__title">Cubes Building</h4>
-                        <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-3">
-                    <div class="item__box">
-                        <h4 class="item__title">The Pencil Building</h4>
-                        <p class="item__text">Stores & Malls</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="projects__slide">
-            <div class="projects__cards">
-                <div class="projects__item-4">
-                    <div class="item__box">
-                        <h4 class="item__title">Modern Cottage</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
-                    </div>
-                </div>
-                <div class="projects__item-5">
-                    <div class="item__box">
-                        <h4 class="item__title">Luxury Beach House</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-6">
-                    <div class="item__box">
-                        <h4 class="item__title">Modern Double Bedroom</h4>
-                        <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="projects__slide">
-            <div class="projects__cards">
-                <div class="projects__item-7">
-                    <div class="item__box">
-                        <h4 class="item__title">Kids Bedroom With Decorations</h4>
-                        <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-8">
-                    <div class="item__box">
-                        <h4 class="item__title">Scandinavian Style Interior</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-9">
-                    <div class="item__box">
-                        <h4 class="item__title">Brown and Gray Painted House</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>                    
+                    
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
                         <a href="/work.html">
@@ -289,7 +290,7 @@
                     </div>
                     <div class="form__item">
                         <label for="communication__message">Message*</label>
-                        <input type="text" id="communication__message" placeholder="Your message" required>
+                        <textarea rows="2" cols="15" placeholder="Your message" id="letter" name="message" required></textarea>
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
@@ -344,7 +345,7 @@
                 <div class="subscription__box">
                     <h5 class="subscription__title">Let's stay in touch</h5>
                     <div class="email__field">
-                        <input type="email" value="Your email address">
+                        <input type="email" placeholder="Your email address">
                         <input type="button" value="SUBSCRIBE">
                     </div>
                     <p class="opacity__text">
