--- a/index.html
+++ b/index.html
@@ -203,103 +203,104 @@
                         </div>
                     </div>
 
-<div class="projects__slider">
-    <div class="projects__slides">
-        <input type="radio" name="projects_r" id="projects_r1" checked>
-        <input type="radio" name="projects_r" id="projects_r2" >
-        <input type="radio" name="projects_r" id="projects_r3" >
+                    <div class="projects__slider">
+                        <div class="projects__slides">
+                            <input type="radio" name="projects_r" id="projects_r1" checked>
+                            <input type="radio" name="projects_r" id="projects_r2" >
+                            <input type="radio" name="projects_r" id="projects_r3" >
+                    
+                            <div class="projects__slide projects__s1">
+                                <div class="projects__cards">
+                                    <div class="projects__item-1">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Red Finger Building</h4>
+                                            <p class="item__text">Business Centers</p>
+                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-2">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Cubes Building</h4>
+                                            <p class="item__text">Business Centers</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-3">
+                                        <div class="item__box">
+                                            <h4 class="item__title">The Pencil Building</h4>
+                                            <p class="item__text">Stores & Malls</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="projects__slide">
+                                <div class="projects__cards">
+                                    <div class="projects__item-4">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Modern Cottage</h4>
+                                            <p class="item__text">Private houses</p>
+                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-5">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Luxury Beach House</h4>
+                                            <p class="item__text">Private houses</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-6">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Modern Double Bedroom</h4>
+                                            <p class="item__text">Apartments & flats</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="projects__slide">
+                                <div class="projects__cards">
+                                    <div class="projects__item-7">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Kids Bedroom With Decorations</h4>
+                                            <p class="item__text">Apartments & flats</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-8">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Scandinavian Style Interior</h4>
+                                            <p class="item__text">Private houses</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="projects__item-9">
+                                        <div class="item__box">
+                                            <h4 class="item__title">Brown and Gray Painted House</h4>
+                                            <p class="item__text">Private houses</p>
+                                            <a href="/cottage.html">
+                                                <button class="orange__button">VIEW PROJECT</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="projects__slide projects__s1">
-            <div class="projects__cards">
-                <div class="projects__item-1">
-                    <div class="item__box">
-                        <h4 class="item__title">Red Finger Building</h4>
-                        <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
-                    </div>
-                </div>
-                <div class="projects__item-2">
-                    <div class="item__box">
-                        <h4 class="item__title">Cubes Building</h4>
-                        <p class="item__text">Business Centers</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-3">
-                    <div class="item__box">
-                        <h4 class="item__title">The Pencil Building</h4>
-                        <p class="item__text">Stores & Malls</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="projects__slide">
-            <div class="projects__cards">
-                <div class="projects__item-4">
-                    <div class="item__box">
-                        <h4 class="item__title">Modern Cottage</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
-                    </div>
-                </div>
-                <div class="projects__item-5">
-                    <div class="item__box">
-                        <h4 class="item__title">Luxury Beach House</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-6">
-                    <div class="item__box">
-                        <h4 class="item__title">Modern Double Bedroom</h4>
-                        <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="projects__slide">
-            <div class="projects__cards">
-                <div class="projects__item-7">
-                    <div class="item__box">
-                        <h4 class="item__title">Kids Bedroom With Decorations</h4>
-                        <p class="item__text">Apartments & flats</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-8">
-                    <div class="item__box">
-                        <h4 class="item__title">Scandinavian Style Interior</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="projects__item-9">
-                    <div class="item__box">
-                        <h4 class="item__title">Brown and Gray Painted House</h4>
-                        <p class="item__text">Private houses</p>
-                        <a href="/cottage.html">
-                            <button class="orange__button">VIEW PROJECT</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
                         <button class="orange__button"><a href="/work.html">VIEW PROJECTS</a></button>
@@ -369,9 +370,13 @@
                         <h2 class="facts__title">Recent news</h2>
                         <div class="facts__cards">
                             <div class="facts__item">
-                                <img src="../img/main/facts__card_2.jpg" alt="card image">
+                                <a href="/infrastructure.html">
+                                    <img src="../img/main/facts__card_2.jpg" alt="card image">
+                                </a>
                                 <div class="item__box">
-                                    <h5 class="item__title">How to Build Climate Change-Resilient Infrastructure</h5>
+                                    <a href="/infrastructure.html">
+                                        <h5 class="item__title">How to Build Climate Change-Resilient Infrastructure</h5>
+                                    </a>
                                     <div class="item__info">
                                         <p class="item__text">Industry News</p>
                                         <hr>
@@ -391,9 +396,13 @@
                             </div>
                             <div class="news__divisor">
                                 <div class="facts__item-mini">
-                                    <img src="../img/main/facts__card_1.jpg" alt="card image">
+                                    <a href="/infrastructure.html">
+                                        <img src="../img/main/facts__card_1.jpg" alt="card image">
+                                    </a>
                                     <div class="item__box">
-                                        <h5 class="item__title orange">How Construction Can Help Itself</h5>
+                                        <a href="/infrastructure.html">
+                                            <h5 class="item__title orange">How Construction Can Help Itself</h5>
+                                        </a>
                                         <div class="item__info">
                                             <p class="item__text">Innovation</p>
                                             <hr>
@@ -407,9 +416,13 @@
                                     </div>
                                 </div>
                                 <div class="facts__item-mini">
-                                    <img src="../img/main/facts__card_3.jpg" alt="card image">
+                                    <a href="/infrastructure.html">
+                                        <img src="../img/main/facts__card_3.jpg" alt="card image">
+                                    </a>
                                     <div class="item__box">
-                                        <h5 class="item__title">Types of Flooring Materials</h5>
+                                        <a href="/infrastructure.html">
+                                            <h5 class="item__title">Types of Flooring Materials</h5>
+                                        </a>
                                         <div class="item__info">
                                             <p class="item__text">Company News</p>
                                             <hr>
@@ -426,9 +439,9 @@
                         </div>
                         <div class="news__view">
                             <h3 class="news__title">Explore all our news posts</h3>
-                            <button class="orange__button"><a href="/news.html">VIEW ALL NEWS</a></button>
+                            <a href="/news.html"><button class="orange__button">VIEW ALL NEWS</button></a>
                         </div>
-                    </div>w
+                    </div>
                 </div>
             </div>
         </section>
@@ -453,7 +466,7 @@
                     </div>
                     <div class="form__item">
                         <label for="communication__message">Message*</label>
-                        <input type="text" id="communication__message" placeholder="Your message" required>
+                        <textarea rows="2" cols="15" placeholder="Your message" id="letter" name="message" required></textarea>
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
@@ -508,7 +521,7 @@
                 <div class="subscription__box">
                     <h5 class="subscription__title">Let's stay in touch</h5>
                     <div class="email__field">
-                        <input type="email" value="Your email address">
+                        <input type="email" placeholder="Your email address">
                         <input type="button" value="SUBSCRIBE">
                     </div>
                     <p class="opacity__text">
