--- a/#source/communication.html
+++ b/#source/communication.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form__item">
                         <label for="communication__message">Message*</label>
-                        <input type="text" id="communication__message" placeholder="Your message" required>
+                        <textarea rows="2" cols="15" placeholder="Your message" id="letter" name="message" required></textarea>
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
