--- a/news.html
+++ b/news.html
@@ -72,7 +72,7 @@
                 </ul>
                 <div class="categories__cards">
                     <div class="categories__item">
-                        <img src="../img/news/image(5).png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image(5).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">How to Build Climate Change-Resilient Infrastructure</a>
@@ -95,7 +95,7 @@
                     </div>
                     
                     <div class="categories__item">
-                        <img src="../img/news/image.png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image.png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">How Construction Can Help Itself</a>
@@ -119,7 +119,7 @@
                     </div>
 
                     <div class="categories__item">
-                        <img src="../img/news/image(1).png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image(1).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">The Difference Between a Digger and an Excavator</a>
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="categories__item">
-                        <img src="../img/news/image(2).png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image(2).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">Building Construction Hand Tools</a>
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="categories__item">
-                        <img src="../img/news/image(3).png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image(3).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">Top 10 Construction Trends</a>
@@ -189,7 +189,7 @@
                     </div>
 
                     <div class="categories__item">
-                        <img src="../img/news/image(4).png" alt="card image">
+                        <a href="/infrastructure.html"><img src="../img/news/image(4).png" alt="card image"></a>
                         <div class="item__box">
                             <h5 class="item__title">
                                 <a href="/infrastructure.html">Types of Flooring Materials</a>
