--- a/positions.html
+++ b/positions.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <h3 class="item__title">Heavy Equipment Operator</h3>
                             </div>
-                            <button class="white__button-32">APPLY NOW</button>
+                            <button class="white__button-32 apply__btn" >APPLY NOW</button>
                         </div>
                         <div class="vacancy__item">
                             <div class="item__divisor">
@@ -87,7 +87,7 @@
                                 </div>
                                 <h3 class="item__title">Financial Compliance Analyst</h3>
                             </div>
-                            <button class="white__button-32">APPLY NOW</button>
+                            <button class="white__button-32 apply__btn" >APPLY NOW</button>
                         </div>
                         <div class="vacancy__item">
                             <div class="item__divisor">
@@ -100,7 +100,7 @@
                                 </div>
                                 <h3 class="item__title">Project Manager - Buildings</h3>
                             </div>
-                            <button class="white__button-32">APPLY NOW</button>
+                            <button class="white__button-32 apply__btn" >APPLY NOW</button>
                         </div>
                         <div class="vacancy__item">
                             <div class="item__divisor">
@@ -113,7 +113,7 @@
                                 </div>
                                 <h3 class="item__title">Environment Specialist</h3>
                             </div>
-                            <button class="white__button-32">APPLY NOW</button>
+                            <button class="white__button-32 apply__btn" >APPLY NOW</button>
                         </div>
                         <div class="vacancy__item">
                             <div class="item__divisor">
@@ -126,7 +126,7 @@
                                 </div>
                                 <h3 class="item__title">Accountant</h3>
                             </div>
-                            <button class="white__button-32">APPLY NOW</button>
+                            <button class="white__button-32 apply__btn" >APPLY NOW</button>
                         </div>
                     </div>
                     <div class="vacancy__sub">
