--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
             </a>
             <nav class="navbar">
                 <ul class="navbar__list">
-                    <li><a href="/about.html">About us</a></li>
+                    <li><a href="about.html">About us</a></li>
                     <li><a href="/services.html">Services</a></li>
                     <li><a href="/work.html">Work</a></li>
                     <li><a href="/news.html">News</a></li>
