--- a/interior__design.html
+++ b/interior__design.html
@@ -19,8 +19,8 @@
 <header class="header">
     <div class="container">
         <div class="header__box">
-            <a href="/index.html">
-                <img src="../img/header/header_logo.svg" alt="logo image">
+            <a href="index.html">
+                <img src="img/header/header_logo.svg" alt="logo image">
             </a>
             <nav class="navbar">
                 <ul class="navbar__list">
@@ -32,14 +32,14 @@
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
-                        <img src="../img/header/iPhone.svg" alt="iphone image">
+                        <img src="img/header/iPhone.svg" alt="iphone image">
                         <div>
                             <p class="contacts__item-text">Call us</p>
                             <a href="tel:4055550128">(405) 555-0128</a>
                         </div>
                     </div>
                     <div class="contacts__item">
-                        <img src="../img/header/Chat.svg" alt="chat img">
+                        <img src="img/header/Chat.svg" alt="chat img">
                         <div>
                             <p class="contacts__item-text">Talk to us</p>
                             <a href="mailto:hello@createx.com">hello@createx.com</a>
